pre-final working todo

--- a/list.html
+++ b/list.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
 
+    <!-- favicon  -->
+    <link type="image/png" sizes="96x96" rel="icon" href="images/todo-list-icon-100.png">
+
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/cbf893b1ad.js" crossorigin="anonymous"></script>
 
