pre-final working todo

--- a/list.html
+++ b/list.html
@@ -38,9 +38,7 @@
         </ol>
     </div>
 
-
-
-
+    <p class="copyright">&copy; Made with 🧡 by Moinak in Kolkata</p>
 
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
