--- a/list.html
+++ b/list.html
@@ -25,8 +25,9 @@
 
 
     <div class="list-container">
-        <form class="todo-form">
 
+
+        <form class="todo-form">
 
             <div class="input-and-add">
                 <button class="add"><i class="fa-solid fa-plus"></i></button>
@@ -34,6 +35,26 @@
             </div>
 
         </form>
+
+        <div class="filter">
+
+            <div class="filter-status">
+                <p>All</p>
+                <div class="active"></div>
+            </div>
+
+            <div class="filter-status">
+                <p>Completed</p>
+                <div></div>
+            </div>
+
+            <div class="filter-status">
+                <p>Pending</p>
+                <div></div>
+            </div>
+
+
+        </div>
 
         <ol class="todo-list">
         </ol>
