--- a/list.html
+++ b/list.html
@@ -38,21 +38,24 @@
 
         <div class="filter">
 
-            <div class="filter-status">
-                <p>All</p>
-                <div class="active"></div>
-            </div>
+            <div class="filter-inner">
 
-            <div class="filter-status">
-                <p>Completed</p>
-                <div></div>
-            </div>
+                <div class="filter-status">
+                    <p>All</p>
+                    <div class="active"></div>
+                </div>
 
-            <div class="filter-status">
-                <p>Pending</p>
-                <div></div>
-            </div>
+                <div class="filter-status">
+                    <p>Completed</p>
+                    <div></div>
+                </div>
 
+                <div class="filter-status">
+                    <p>Pending</p>
+                    <div></div>
+                </div>
+
+            </div>
 
         </div>
 
@@ -65,6 +68,16 @@
 
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <!-- gsap CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+        integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- gsap flip -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
+        integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- javascript -->
     <script src="app.js"></script>
