final all bug fixed till now

--- a/list.html
+++ b/list.html
@@ -68,7 +68,7 @@
 
         <div class="clear-btn">
             <div class="popup">
-                <span class="popuptext" id="myPopup">Warning! This will delete the entire ToDo.</span>
+                <span class="popuptext" id="myPopup">This will delete all your tasks!</span>
             </div>
             <button type="button" class="clear-all-btn">Clear ALL</button>
         </div>
