improved status on reload and input as per filter status

--- a/list.html
+++ b/list.html
@@ -43,17 +43,17 @@
                 <div class="filter-inner">
 
                     <div class="filter-status">
-                        <p>All</p>
-                        <div></div>
+                        <p class='all'>All</p>
+
                     </div>
 
                     <div class="filter-status">
-                        <p>Completed</p>
-                        <div></div>
+                        <p class='completed'>Completed</p>
+
                     </div>
 
                     <div class="filter-status">
-                        <p>Pending</p>
+                        <p class="pending">Pending</p>
                         <div class="active"></div>
                     </div>
 
